--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -8,7 +8,7 @@ spring:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/dbventas?useSSL = false
     username: postgres
-    password: saori.1222
+    password: ditta.0425
     
   jpa:
     show-sql: true
